Add Paginiation and Lookups by Attributes